--- a/index.html
+++ b/index.html
@@ -41,13 +41,7 @@
                         <a class="nav-link" href="#testmonial">Testmonial</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#blog">Blog</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="- btn btn-primary rounded ml-4" href="components.html">Copmonents</a>
                     </li>
                 </ul>
             </div>
@@ -59,9 +53,9 @@
     <header class="header" id="home">
         <div class="container">
             <div class="infos">
-                <h6 class="subtitle">hello,I'm</h6>
-                <h6 class="title">James Smith</h6>
-                <p>UI/UX Designer</p>
+                <h6 class="subtitle">Hello,I'm</h6>
+                <h6 class="title">Miftah</h6>
+                <p>Fullstack Developer, Database Administrator & System Administrator</p>
 
                 <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">HIRE ME</button>
