add icon and update beranda

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Miftah Portofolio Programmer & IT">
+    <meta name="description" content="Miftah Portofolio Programmer, DBA, System Administrator & IT Developer">
     <meta name="author" content="Miftah">
     <title>My Portofolio | Programmer & IT</title>
     <!-- font icons -->
@@ -11,7 +11,7 @@
     <!-- Bootstrap + Steller main styles -->
 	<link rel="stylesheet" href="assets/css/steller.css">
     <!-- Link Icon -->
-    <link rel="shortcut icon" href="assets/imgs/MTH.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/imgs/icon.png" type="image/x-icon">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
@@ -58,15 +58,14 @@
                 <p>Fullstack Developer, Database Administrator & System Administrator</p>
 
                 <div class="buttons pt-3">
-                    <button class="btn btn-primary rounded">HIRE ME</button>
-                    <button class="btn btn-dark rounded">DOWNLOAD CV</button>
+                    <button class="btn btn-sm btn-primary rounded">HIRE ME</button>
+                    <button class="btn btn-sm btn-dark rounded">DOWNLOAD CV</button>
                 </div>      
 
                 <div class="socials mt-4">
                     <a class="social-item" href="javascript:void(0)"><i class="ti-facebook"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-google"></i></a>
+                    <a class="social-item" href="javascript:void(0)"><i class="ti-instagram"></i></a>
                     <a class="social-item" href="javascript:void(0)"><i class="ti-github"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-twitter"></i></a>
                 </div>
             </div>              
             <div class="img-holder">
@@ -77,15 +76,15 @@
         <!-- Header-widget -->
         <div class="widget">
             <div class="widget-item">
-                <h2>124</h2>
+                <h2>20</h2>
                 <p>Happy Clients</p>
             </div>
             <div class="widget-item">
-                <h2>456</h2>
+                <h2>29</h2>
                 <p>Project Completed</p>
             </div>
             <div class="widget-item">
-                <h2>789</h2>
+                <h2>2</h2>
                 <p>Awards Won</p>
             </div>
         </div>
