update beranda & man, avatar .svg

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h2>29</h2>
                 <p>Project Completed</p>
             </div>
-            <div class="widget-item">
+            <div class="widget-item d-none">
                 <h2>2</h2>
                 <p>Awards Won</p>
             </div>
@@ -96,7 +96,7 @@
         <div class="container mt-5">
             <div class="row text-center text-md-left">
                 <div class="col-md-3">
-                    <img src="assets/imgs/avatar.jpg" alt="" class="img-thumbnail mb-4">
+                    <img src="assets/imgs/avatar.svg" alt="" class="img-thumbnail mb-4">
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">James Smith</h6>
