--- a/index.html
+++ b/index.html
@@ -118,11 +118,10 @@
     <!-- Service section -->
     <section id="service" class="section">
         <div class="container text-center">
-            <h6 class="subtitle">Keterampilan</h6>
-            <h6 class="section-title mb-4">Apa yang saya kuasai ?</h6>
-            <p class="mb-5 pb-4">Saya sangat profesional dan memiliki jiwa tanggung jawab yang besar dalam menyelesaikan masalah. <br>
-                Adapun beberapa keahlian saya dalam dunia kerja sebagai berikut.</p>
-
+            <h6 class="subtitle">Layanan</h6>
+            <h6 class="section-title mb-4">Apa yang kamu cari ?</h6>
+            <p class="mb-5 pb-4">Selalu memperioritaskan ketepatan dan kecepatan dalam mengembangkan ide maupun memecahkan masalah. <br>
+                Adapun beberapa layanan yang saya kuasai.</p>
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
@@ -143,7 +142,7 @@
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-lockk"></i>
+                            <i class="icon ti-lock"></i>
                             <h5>Security Administrator</h5>
                         </div>
                     </div>
@@ -151,7 +150,7 @@
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-crown"></i>
+                            <i class="icon ti-heart"></i>
                             <h5>UI/UX Design</h5>
                         </div>
                     </div>
@@ -180,6 +179,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-star"></i>
+                            <h5>Digital Ads</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -188,31 +195,45 @@
     <!-- Skills section -->
     <section class="section">
         <div class="container text-center">
-            <h6 class="subtitle">Skills</h6>
-            <h6 class="section-title mb-4">Why Choose me</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
-                rerum commodi corrupti, temporibus non quam.</p>
+            <h6 class="subtitle">Keterampilan</h6>
+            <h6 class="section-title mb-4">Kenapa memilih saya ?</h6>
+            <p class="mb-5 pb-4">Saya sangat profesional dan memiliki jiwa tanggung jawab yang besar dalam menyelesaikan masalah. <br>
+                Adapun beberapa keahlian saya dalam dunia kerja sebagai berikut.</p>
 
             <div class="row text-left">
                 <div class="col-sm-6">
-                    <h6 class="mb-3">Photoshop</h6>
+                    <h6 class="mb-3">Framework, Native PHP </h6>
                     <div class="progress">
                         <div class="progress-bar bg-primary" role="progressbar" style="width: 89%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>89%</span></div>
+                            aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <h6 class="mb-3">Web Design</h6>
+                    <h6 class="mb-3">Framework, Native Javascript </h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 89%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>70%</span></div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h6 class="mb-3">Framework, Native CSS</h6>
                     <div class="progress">
                         <div class="progress-bar bg-primary" role="progressbar" style="width: 83%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>83%</span></div>
+                            aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <h6 class="mb-3">App Design</h6>
+                    <h6 class="mb-3">Database & System</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 95%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>95%</span></div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 83%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>80%</span></div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h6 class="mb-3">Design Grafis</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-warning" role="progressbar" style="width: 95%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>60%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -220,6 +241,34 @@
                     <div class="progress">
                         <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h6 class="mb-3">API</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h6 class="mb-3">Sistem Operation</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>80%</span></div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h6 class="mb-3">Document & Presentation</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h6 class="mb-3">Integration Thirdy Party</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
                     </div>
                 </div>
             </div>
@@ -230,51 +279,39 @@
     <!-- Portfolio section -->
     <section id="portfolio" class="section">
         <div class="container text-center">
-            <h6 class="subtitle">Portfolio</h6>
-            <h6 class="section-title mb-4">Check My Wonderful Works</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
-                rerum commodi corrupti, temporibus non quam.</p>
+            <h6 class="subtitle">Pengalaman</h6>
+            <h6 class="section-title mb-4">Ayo lihat </h6>
+            <p class="mb-5 pb-4">Saya memiliki pengalaman kurang lebih 4 tahun di dunia kerja. <br>
+                berikut beberapa contoh hasil perkerjaan saya.</p>
 
             <div class="row">
                 <div class="col-sm-4">
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-1.jpg" alt="">
+                        <img src="assets/imgs/folio-1.png" alt="Berita GenPi Jawa Timur">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                                <h5>Jatim.genpi.co</h5>
+                                <a href="https://www.jatim.genpi.co"><i class="ti-eye"></i></a>
+                                <a href="https://www.jatim.genpi.co"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-2.jpg" alt="">
+                        <img src="assets/imgs/folio-2.png" alt="Berita GenPi edisi Ramadhan">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="img-wrapper">
-                        <img src="assets/imgs/folio-3.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                                <h5>Genpi.co Ramadhan</h5>
+                                <a href="https://www.genpi.co/ramadan"><i class="ti-eye"></i></a>
+                                <a href="https://www.genpi.co/ramadan"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-4.jpg" alt="">
+                        <img src="assets/imgs/folio-1-1.png" alt="Portal GenPi Jawa Timur">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
+                                <h5>CMS Genpi.co</h5>
+                                <a href="javascript:void(0)"><i class="ti-eye"></i></a>
                                 <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>
                         </div>
@@ -282,21 +319,55 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-5.jpg" alt="">
+                        <img src="assets/imgs/folio-3-1.png" alt="Artichan Morula IVF Jakarta">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                                <h5>Pelayanan RS Bayi Tabung Morula IVF Jakarta</h5>
+                                <a href="https://artichan.morulaivf.co.id/userman/auth"><i class="ti-eye"></i></a>
+                                <a href="https://artichan.morulaivf.co.id/userman/auth"><i class="ti-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="img-wrapper">
+                        <img src="assets/imgs/folio-5.png" alt="ANRI">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>E Pengelolaan Arsip Nasional</h5>
+                                <a href="https://anri.go.id/login"><i class="ti-eye"></i></a>
+                                <a href="https://anri.go.id/login"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-6.jpg" alt="">
+                        <img src="assets/imgs/folio-4.png" alt="GKI Camar">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
+                                <h5>GKI Camar</h5>
+                                <a href="https://gkicamar.org/"><i class="ti-eye"></i></a>
+                                <a href="https://gkicamar.org/"><i class="ti-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="img-wrapper">
+                        <img src="assets/imgs/folio-6.png" alt="ANRI">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Haier Asset Aqua Japan</h5>
+                                <a href="https://aquajapanid.com/"><i class="ti-eye"></i></a>
+                                <a href="https://aquajapanid.com/"><i class="ti-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-wrapper">
+                        <img src="assets/imgs/folio-7.png" alt="Harum Sisma Medika">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>SIMRS Harum Sisma Medika Bekasi</h5>
+                                <a href="javascript:void(0)"><i class="ti-eye"></i></a>
                                 <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>
                         </div>
