--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <div class="col-sm-6">
                     <h6 class="mb-3">Design Grafis</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-warning" role="progressbar" style="width: 95%;" aria-valuenow="25"
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 95%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100"><span>60%</span></div>
                     </div>
                 </div>
@@ -248,6 +248,13 @@
                     <div class="progress">
                         <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h6 class="mb-3">Payment Gateway</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>70%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -280,8 +287,8 @@
     <section id="portfolio" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Pengalaman</h6>
-            <h6 class="section-title mb-4">Ayo lihat </h6>
-            <p class="mb-5 pb-4">Saya memiliki pengalaman kurang lebih 4 tahun di dunia kerja. <br>
+            <h6 class="section-title mb-4">Apa saja yang sudah dikerjakan ?</h6>
+            <p class="mb-5 pb-4">Saya memiliki pengalaman kurang lebih 4 tahun di dunia kerja dari berbagai sumber, baik pekerja kontrak maupun paruh waktu. <br>
                 berikut beberapa contoh hasil perkerjaan saya.</p>
 
             <div class="row">
@@ -328,8 +335,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-4">
                     <div class="img-wrapper">
                         <img src="assets/imgs/folio-5.png" alt="ANRI">
                         <div class="overlay">
@@ -350,6 +355,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="img-wrapper">
+                        <img src="assets/imgs/folio-10.png" alt="stp-digital">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>stp-digital</h5>
+                                <a href="https://stp-digital.com/"><i class="ti-eye"></i></a>
+                                <a href="https://stp-digital.com/"><i class="ti-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="img-wrapper">
@@ -367,8 +382,28 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>SIMRS Harum Sisma Medika Bekasi</h5>
+                                <a href="https://harumsismamedika.com/"><i class="ti-eye"></i></a>
+                                <a href="https://harumsismamedika.com/"><i class="ti-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-wrapper">
+                        <img src="assets/imgs/folio-8.png" alt="SI Tanam">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>SI Tanam</h5>
                                 <a href="javascript:void(0)"><i class="ti-eye"></i></a>
                                 <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-wrapper">
+                        <img src="assets/imgs/folio-9.png" alt="Sistem Informasi RPHJP">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Sistem Informasi RPHJP</h5>
+                                <a href="https://rphjpkph.menlhk.go.id/portal.php"><i class="ti-eye"></i></a>
+                                <a href="https://rphjpkph.menlhk.go.id/portal.php"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
