--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     <!-- Testmonial Section -->
     <section id="testmonial" class="section">
         <div class="container text-center">
-            <h6 class="subtitle">Testmonial</h6>
+            <h6 class="subtitle">Rekan</h6>
             <h6 class="section-title mb-4">What People Say About Me</h6>
             <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
                 rerum commodi corrupti, temporibus non quam.</p>
@@ -470,7 +470,7 @@
     <!-- End of testmonial section -->
 
     <!-- Blog Section -->
-    <section id="blog" class="section">
+    <section id="blog" class="section d-none">
         <div class="container text-center">
             <h6 class="subtitle">My Blogs</h6>
             <h6 class="section-title mb-4">Latest News</h6>
@@ -537,8 +537,8 @@
                 <div class="card-body text-light">
                     <div class="row align-items-center">
                         <div class="col-sm-9 text-center text-sm-left">
-                            <h5 class="mt-3">Hire Me For Your Project</h5>
-                            <p class="mb-3">Accusantium labore nostrum similique quisquam.</p>
+                            <h5 class="mt-3">Siap bekerjasama dengan anda</h5>
+                            <p class="mb-3">Dengan pengalaman yang cukup dan memprioritaskan ketepatan dan kecepatan.</p>
                         </div>
                         <div class="col-sm-3 text-center text-sm-right">
                             <button class="btn btn-light rounded">Hire Me!</button>
@@ -553,12 +553,11 @@
     <!-- Contact Section -->
     <section id="contact" class="position-relative section">
         <div class="container text-center">
-            <h6 class="subtitle">Contact</h6>
-            <h6 class="section-title mb-4">Get In Touch With Me</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
-                rerum commodi corrupti, temporibus non quam.</p>
+            <h6 class="subtitle">Kontak</h6>
+            <h6 class="section-title mb-4">Hubungi saya</h6>
+            <p class="mb-5 pb-4">Sangat senang bekerjasama dan menjalin hubungan baik.</p>
 
-            <div class="contact text-left">
+            <div class="contact text-left d-none">
                 <div class="form">
                     <h6 class="subtitle">Available 24/7</h6>
                     <h6 class="section-title mb-4">Get In Touch</h6>
@@ -603,7 +602,7 @@
                 </div>
             </div>
         </div>
-        <div id="map">
+        <div id="map d-none">
             <iframe src="https://snazzymaps.com/embed/61257"></iframe>
         </div>
     </section>
