--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         <div class="container text-center">
             <h6 class="subtitle">Kontak</h6>
             <h6 class="section-title mb-4">Hubungi saya</h6>
-            <p class="mb-5 pb-4">Sangat senang bekerjasama dan menjalin hubungan baik.</p>
+            <p class="mb-5 pb-4">Sangat senang bekerjasama dan menjalin hubungan baik dengan anda.</p>
 
             <div class="contact text-left d-none">
                 <div class="form">
@@ -603,7 +603,7 @@
             </div>
         </div>
         <div id="map d-none">
-            <iframe src="https://snazzymaps.com/embed/61257"></iframe>
+            <!-- <iframe src="https://snazzymaps.com/embed/61257"></iframe> -->
         </div>
     </section>
     <!-- End of Contact Section -->
