--- a/index.html
+++ b/index.html
@@ -418,9 +418,8 @@
     <section id="testmonial" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Rekan</h6>
-            <h6 class="section-title mb-4">What People Say About Me</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
-                rerum commodi corrupti, temporibus non quam.</p>
+            <h6 class="section-title mb-4">Apa pendapat tentang saya</h6>
+            <p class="mb-5 pb-4">Berikut adalah beberapa pendapat dari rekan kerja yang menjalin hubungan baik dengan saya selama ini.</p>
 
 
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
