update pengalaman & rekan

--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
                         <img src="assets/imgs/folio-1.png" alt="Berita GenPi Jawa Timur">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Jatim.genpi.co</h5>
-                                <a href="https://www.jatim.genpi.co"><i class="ti-eye"></i></a>
-                                <a href="https://www.jatim.genpi.co"><i class="ti-link"></i></a>
+                                <h5>Genpi.co wilayah Jawa Timur</h5>
+                                <a href="https://jatim.genpi.co"><i class="ti-eye"></i></a>
+                                <a href="https://jatim.genpi.co"><i class="ti-link d-none"></i></a>
                             </div>
                         </div>
                     </div>
@@ -309,7 +309,7 @@
                             <div class="overlay-infos">
                                 <h5>Genpi.co Ramadhan</h5>
                                 <a href="https://www.genpi.co/ramadan"><i class="ti-eye"></i></a>
-                                <a href="https://www.genpi.co/ramadan"><i class="ti-link"></i></a>
+                                <a href="https://www.genpi.co/ramadan"><i class="ti-link d-none"></i></a>
                             </div>
                         </div>
                     </div>
@@ -319,7 +319,7 @@
                             <div class="overlay-infos">
                                 <h5>CMS Genpi.co</h5>
                                 <a href="javascript:void(0)"><i class="ti-eye"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                                <a href="javascript:void(0)"><i class="ti-link d-none"></i></a>
                             </div>
                         </div>
                     </div>
@@ -331,7 +331,7 @@
                             <div class="overlay-infos">
                                 <h5>Pelayanan RS Bayi Tabung Morula IVF Jakarta</h5>
                                 <a href="https://artichan.morulaivf.co.id/userman/auth"><i class="ti-eye"></i></a>
-                                <a href="https://artichan.morulaivf.co.id/userman/auth"><i class="ti-link"></i></a>
+                                <a href="https://artichan.morulaivf.co.id/userman/auth"><i class="ti-link d-none"></i></a>
                             </div>
                         </div>
                     </div>
@@ -341,7 +341,7 @@
                             <div class="overlay-infos">
                                 <h5>E Pengelolaan Arsip Nasional</h5>
                                 <a href="https://anri.go.id/login"><i class="ti-eye"></i></a>
-                                <a href="https://anri.go.id/login"><i class="ti-link"></i></a>
+                                <a href="https://anri.go.id/login"><i class="ti-link d-none"></i></a>
                             </div>
                         </div>
                     </div>
@@ -351,7 +351,7 @@
                             <div class="overlay-infos">
                                 <h5>GKI Camar</h5>
                                 <a href="https://gkicamar.org/"><i class="ti-eye"></i></a>
-                                <a href="https://gkicamar.org/"><i class="ti-link"></i></a>
+                                <a href="https://gkicamar.org/"><i class="ti-link d-none"></i></a>
                             </div>
                         </div>
                     </div>
@@ -361,7 +361,7 @@
                             <div class="overlay-infos">
                                 <h5>stp-digital</h5>
                                 <a href="https://stp-digital.com/"><i class="ti-eye"></i></a>
-                                <a href="https://stp-digital.com/"><i class="ti-link"></i></a>
+                                <a href="https://stp-digital.com/"><i class="ti-link d-none"></i></a>
                             </div>
                         </div>
                     </div>
@@ -373,7 +373,7 @@
                             <div class="overlay-infos">
                                 <h5>Haier Asset Aqua Japan</h5>
                                 <a href="https://aquajapanid.com/"><i class="ti-eye"></i></a>
-                                <a href="https://aquajapanid.com/"><i class="ti-link"></i></a>
+                                <a href="https://aquajapanid.com/"><i class="ti-link d-none"></i></a>
                             </div>
                         </div>
                     </div>
@@ -383,7 +383,7 @@
                             <div class="overlay-infos">
                                 <h5>SIMRS Harum Sisma Medika Bekasi</h5>
                                 <a href="https://harumsismamedika.com/"><i class="ti-eye"></i></a>
-                                <a href="https://harumsismamedika.com/"><i class="ti-link"></i></a>
+                                <a href="https://harumsismamedika.com/"><i class="ti-link d-none"></i></a>
                             </div>
                         </div>
                     </div>
@@ -393,7 +393,7 @@
                             <div class="overlay-infos">
                                 <h5>SI Tanam</h5>
                                 <a href="javascript:void(0)"><i class="ti-eye"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                                <a href="javascript:void(0)"><i class="ti-link d-none"></i></a>
                             </div>
                         </div>
                     </div>
@@ -403,7 +403,29 @@
                             <div class="overlay-infos">
                                 <h5>Sistem Informasi RPHJP</h5>
                                 <a href="https://rphjpkph.menlhk.go.id/portal.php"><i class="ti-eye"></i></a>
-                                <a href="https://rphjpkph.menlhk.go.id/portal.php"><i class="ti-link"></i></a>
+                                <a href="https://rphjpkph.menlhk.go.id/portal.php"><i class="ti-link d-none"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="img-wrapper">
+                        <img src="assets/imgs/folio-11.png" alt="SIPUH">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Sistem Informasi Penatausahaan Hasil Hutan</h5>
+                                <a href="https://sipuhh.phl.menlhk.go.id/auth/login"><i class="ti-eye"></i></a>
+                                <a href="https://sipuhh.phl.menlhk.go.id/auth/login"><i class="ti-link d-none"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-wrapper">
+                        <img src="assets/imgs/folio-12.png" alt="Kitakirim">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Market Place Kitakirim</h5>
+                                <a href="https://kitakirim.id/"><i class="ti-eye"></i></a>
+                                <a href="https://kitakirim.id/"><i class="ti-link d-none"></i></a>
                             </div>
                         </div>
                     </div>
