update testimoni & update link

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                             <div class="overlay-infos">
                                 <h5>Genpi.co wilayah Jawa Timur</h5>
                                 <a href="https://jatim.genpi.co"><i class="ti-eye"></i></a>
-                                <a href="https://jatim.genpi.co"><i class="ti-link d-none"></i></a>
+                                <a href="https://jatim.genpi.co" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -309,7 +309,7 @@
                             <div class="overlay-infos">
                                 <h5>Genpi.co Ramadhan</h5>
                                 <a href="https://www.genpi.co/ramadan"><i class="ti-eye"></i></a>
-                                <a href="https://www.genpi.co/ramadan"><i class="ti-link d-none"></i></a>
+                                <a href="https://www.genpi.co/ramadan" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -319,7 +319,7 @@
                             <div class="overlay-infos">
                                 <h5>CMS Genpi.co</h5>
                                 <a href="javascript:void(0)"><i class="ti-eye"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link d-none"></i></a>
+                                <a href="javascript:void(0)" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -331,7 +331,7 @@
                             <div class="overlay-infos">
                                 <h5>Pelayanan RS Bayi Tabung Morula IVF Jakarta</h5>
                                 <a href="https://artichan.morulaivf.co.id/userman/auth"><i class="ti-eye"></i></a>
-                                <a href="https://artichan.morulaivf.co.id/userman/auth"><i class="ti-link d-none"></i></a>
+                                <a href="https://artichan.morulaivf.co.id/userman/auth" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -341,7 +341,7 @@
                             <div class="overlay-infos">
                                 <h5>E Pengelolaan Arsip Nasional</h5>
                                 <a href="https://anri.go.id/login"><i class="ti-eye"></i></a>
-                                <a href="https://anri.go.id/login"><i class="ti-link d-none"></i></a>
+                                <a href="https://anri.go.id/login" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -351,7 +351,7 @@
                             <div class="overlay-infos">
                                 <h5>GKI Camar</h5>
                                 <a href="https://gkicamar.org/"><i class="ti-eye"></i></a>
-                                <a href="https://gkicamar.org/"><i class="ti-link d-none"></i></a>
+                                <a href="https://gkicamar.org/" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -361,7 +361,7 @@
                             <div class="overlay-infos">
                                 <h5>stp-digital</h5>
                                 <a href="https://stp-digital.com/"><i class="ti-eye"></i></a>
-                                <a href="https://stp-digital.com/"><i class="ti-link d-none"></i></a>
+                                <a href="https://stp-digital.com/" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -373,7 +373,7 @@
                             <div class="overlay-infos">
                                 <h5>Haier Asset Aqua Japan</h5>
                                 <a href="https://aquajapanid.com/"><i class="ti-eye"></i></a>
-                                <a href="https://aquajapanid.com/"><i class="ti-link d-none"></i></a>
+                                <a href="https://aquajapanid.com/" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -383,7 +383,7 @@
                             <div class="overlay-infos">
                                 <h5>SIMRS Harum Sisma Medika Bekasi</h5>
                                 <a href="https://harumsismamedika.com/"><i class="ti-eye"></i></a>
-                                <a href="https://harumsismamedika.com/"><i class="ti-link d-none"></i></a>
+                                <a href="https://harumsismamedika.com/" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -393,7 +393,7 @@
                             <div class="overlay-infos">
                                 <h5>SI Tanam</h5>
                                 <a href="javascript:void(0)"><i class="ti-eye"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link d-none"></i></a>
+                                <a href="javascript:void(0)" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -403,7 +403,7 @@
                             <div class="overlay-infos">
                                 <h5>Sistem Informasi RPHJP</h5>
                                 <a href="https://rphjpkph.menlhk.go.id/portal.php"><i class="ti-eye"></i></a>
-                                <a href="https://rphjpkph.menlhk.go.id/portal.php"><i class="ti-link d-none"></i></a>
+                                <a href="https://rphjpkph.menlhk.go.id/portal.php" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -415,7 +415,7 @@
                             <div class="overlay-infos">
                                 <h5>Sistem Informasi Penatausahaan Hasil Hutan</h5>
                                 <a href="https://sipuhh.phl.menlhk.go.id/auth/login"><i class="ti-eye"></i></a>
-                                <a href="https://sipuhh.phl.menlhk.go.id/auth/login"><i class="ti-link d-none"></i></a>
+                                <a href="https://sipuhh.phl.menlhk.go.id/auth/login" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -425,7 +425,7 @@
                             <div class="overlay-infos">
                                 <h5>Market Place Kitakirim</h5>
                                 <a href="https://kitakirim.id/"><i class="ti-eye"></i></a>
-                                <a href="https://kitakirim.id/"><i class="ti-link d-none"></i></a>
+                                <a href="https://kitakirim.id/" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -449,16 +449,17 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="card testmonial-card border">
                             <div class="card-body">
                                 <img src="assets/imgs/avatar-1.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum voluptates
-                                    in enim vel amet?</p>
-                                <h1 class="title">Emma Re</h1>
-                                <h1 class="subtitle">Graphic Designer</h1>
+                                <p>Pekerja keras, mampu bekerja sendiri maupun tim dan bisa diandalkan.</p>
+                                <h1 class="title">Didit Rukman</h1>
+                                <h1 class="subtitle">UI & UX design, FE, QA</h1>
                             </div>
                         </div>
                     </div>
@@ -466,10 +467,9 @@
                         <div class="card testmonial-card border">
                             <div class="card-body">
                                 <img src="assets/imgs/avatar-2.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum voluptates
-                                    in enim vel amet?</p>
-                                <h1 class="title">James Bert</h1>
-                                <h1 class="subtitle">Web Designer</h1>
+                                <p>Cepat Beradaptasi</p>
+                                <h1 class="title">Fendi Setiabudi</h1>
+                                <h1 class="subtitle">Pranata Komputer KLHK</h1>
                             </div>
                         </div>
                     </div>
@@ -477,10 +477,29 @@
                         <div class="card testmonial-card border">
                             <div class="card-body">
                                 <img src="assets/imgs/avatar-3.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum voluptates
-                                    in enim vel amet?</p>
-                                <h1 class="title">Michael Abra</h1>
-                                <h1 class="subtitle">Web Developer</h1>
+                                <p>Miftah merupakan seseorang yang dietail oriented, tekun, cepat belajar dan dapat handling semua pekerjaan yang menjadi tanggung jawabnya</p>
+                                <h1 class="title">Wisnu Yudistirawan</h1>
+                                <h1 class="subtitle">Software Enginer, Cyber Security Consultant</h1>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card testmonial-card border">
+                            <div class="card-body">
+                                <img src="assets/imgs/avatar-3.jpg" alt="">
+                                <p>Saya sangat senang bisa bekerja dengan Miftah dalam proyek ini. Dia selalu dapat dipercaya untuk menyelesaikan tugas tepat waktu dengan hasil yang sangat memuaskan. Selain itu dia juga sangat responsif dan selalu siap membantu ketika dibutuhkan. Saya merasa sangat neruntung bisa bekerja bersama Miftah dan saya yakin dia akan menjadi aset berharga untuk setiap tim di masa depan</p>
+                                <h1 class="title">Triono Hidayat</h1>
+                                <h1 class="subtitle">Software Manager</h1>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card testmonial-card border">
+                            <div class="card-body">
+                                <img src="assets/imgs/avatar-3.jpg" alt="">
+                                <p>Inovatif, responsif dan asik kerjasamanya, thanks</p>
+                                <h1 class="title">Abdul Haris</h1>
+                                <h1 class="subtitle">SPV Retail Development SAP Express Pusat</h1>
                             </div>
                         </div>
                     </div>
