--- a/index.html
+++ b/index.html
@@ -204,43 +204,43 @@
                 <div class="col-sm-6">
                     <h6 class="mb-3">Framework, Native PHP </h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 89%;" aria-valuenow="25"
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <h6 class="mb-3">Framework, Native Javascript </h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 89%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>70%</span></div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <h6 class="mb-3">Framework, Native CSS</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 83%;" aria-valuenow="25"
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <h6 class="mb-3">Database & System</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 83%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>80%</span></div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <h6 class="mb-3">Design Grafis</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 95%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>60%</span></div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 75%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>75%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <h6 class="mb-3">SEO</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 80%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>80%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -253,14 +253,14 @@
                 <div class="col-sm-6">
                     <h6 class="mb-3">Payment Gateway</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>70%</span></div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 80%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>80%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <h6 class="mb-3">Sistem Operation</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 80%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100"><span>80%</span></div>
                     </div>
                 </div>
@@ -274,7 +274,7 @@
                 <div class="col-sm-6">
                     <h6 class="mb-3">Integration Thirdy Party</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
                     </div>
                 </div>
@@ -597,46 +597,22 @@
             <h6 class="section-title mb-4">Hubungi saya</h6>
             <p class="mb-5 pb-4">Sangat senang bekerjasama dan menjalin hubungan baik dengan anda.</p>
 
-            <div class="contact text-left d-none">
-                <div class="form">
-                    <h6 class="subtitle">Available 24/7</h6>
-                    <h6 class="section-title mb-4">Get In Touch</h6>
-                    <form>
-                        <div class="form-group">
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp" placeholder="Enter email" required>
+            <div class="contact text-left row">
+                <div class="contact-infos col-md-12">
+                    <div class="row">
+                        <div class="item col-md-6">
+                            <i class="ti-mobile"></i>
+                            <div>
+                                <h5>Whatsapp</h5>
+                                <p><a href="https://wa.link/kc0ehi" class="text-secondary" target="_blank">Hubungi saya</a></p>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" id="exampleInputPassword1"
-                                placeholder="Password" required>
-                        </div>
-                        <div class="form-group">
-                            <textarea name="contact-message" id="" cols="30" rows="5" class="form-control"
-                                placeholder="Message"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-block rounded w-lg">Send Message</button>
-                    </form>
-                </div>
-                <div class="contact-infos">
-                    <div class="item">
-                        <i class="ti-location-pin"></i>
-                        <div class="">
-                            <h5>Location</h5>
-                            <p> 12345 Fake ST NoWhere AB Country</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <i class="ti-mobile"></i>
-                        <div>
-                            <h5>Phone Number</h5>
-                            <p>(123) 456-7890</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <i class="ti-email"></i>
-                        <div class="mb-0">
-                            <h5>Email Address</h5>
-                            <p>info@website.com</p>
+                        <div class="item col-md-6">
+                            <i class="ti-email"></i>
+                            <div>
+                                <h5>Email Address</h5>
+                                <p><a href="mailto:m3010991@gmail.com" class="text-secondary" target="_blank">Kirim pesan</a></p>
+                            </div>
                         </div>
                     </div>
                 </div>
